--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{github-username}.github.io/{repo-name}",
+  "homepage": "http://JakkarinK.github.io/Velocity-Templete",
   "name": "velocity-templete",
   "version": "0.1.0",
   "private": true,
